infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-react-app-service
spec:
  selector:
    app: my-react-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
